feat: add reactive forms to Configuration/sites (#3615)