@@ -24,7 +24,6 @@ import org.apache.streampipes.extensions.api.migration.IModelMigrator;
 import org.apache.streampipes.extensions.api.pe.IStreamPipesPipelineElement;
 import org.apache.streampipes.sinks.brokers.jvm.bufferrest.BufferRestPublisherSink;
 import org.apache.streampipes.sinks.brokers.jvm.jms.JmsPublisherSink;
-import org.apache.streampipes.sinks.brokers.jvm.migrations.RestSinkMigrationV1;
 import org.apache.streampipes.sinks.brokers.jvm.rabbitmq.RabbitMqPublisherSink;
 import org.apache.streampipes.sinks.brokers.jvm.rest.RestSink;
 import org.apache.streampipes.sinks.brokers.jvm.websocket.WebsocketServerSink;
@@ -51,8 +50,6 @@ public class BrokerSinksExtensionModuleExport implements IExtensionModuleExport 
 
   @Override
   public List<IModelMigrator<?, ?>> migrators() {
-    return List.of(
-        new RestSinkMigrationV1()
-    );
+    return Collections.emptyList();
   }
 }
